[package]
name = "cbored"
version = "0.3.3"
edition = "2021"
authors = ["Vincent Hanquez <vincent@typed.io>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/vincenthz/cbored"
repository = "https://github.com/vincenthz/cbored"
description = "CBOR exact reader and writer"
keywords = ["CBOR"]
categories = [ "parsing", "encoding" ]

[dependencies]
cbored-derive = { path = "./cbored-derive", version = "0.3", optional = true }

[features]
default = []
derive = ["cbored-derive"]
