[package]
name = "cbored-derive"
version = "0.3.2"
edition = "2021"
authors = ["Vincent Hanquez <vincent@typed.io>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/vincenthz/cbored"
repository = "https://github.com/vincenthz/cbored"
description = "CBOR exact reader and writer (CborRepr derive macro)"
keywords = ["CBOR"]
categories = [ "parsing", "encoding" ]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "1.0"
